[project]
name = "multi-agent-ai-with-tensorflow-and-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "ipykernel==6.30.1",
    "jupyter==1.1.1",
    "langchain-core==1.0.4",
    "langchain-ollama==1.0.0",
    "langgraph==1.0.4",
    "matplotlib==3.10.5",
    "mypy==1.17.1",
    "numpy==2.1.3",
    "orjson==3.11.2",
    "pandas==2.3.2",
    "prometheus-client==0.22.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==6.3.0",
    "pytest-mock==3.15.0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "ruff==0.13.1",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "structlog==25.4.0",
    "tenacity==9.1.2",
    "tensorflow==2.20.0",
    "tensorflow-datasets==4.9.9",
    "uvicorn[standard]==0.35.0",
]
